[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-streamlit-utils"
version = "0.1.2"
description = "Streamlit-focused utilities for Snowflake: standardized connections, resilient caching, helpers, and optional schema browser."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Will Sheehan", email="snowflake.utilities@gmail.com" }]

dependencies = [
  "streamlit>=1.29",
  "snowflake-connector-python>=3.0",
  "snowflake-snowpark-python>=1.10",
  "pandas>=1.5",
  "typing-extensions>=4.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.10",
  "ruff>=0.4",
  "black>=24.1.0",
  "mypy>=1.8"
]

[tool.setuptools]
packages = ["sf_streamlit_utils"]
include-package-data = true
