[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "flakestream"
version = "0.1.12" 
description = "Streamlit-focused utilities for Snowflake: standardized connections, resilient caching, helpers, and optional schema browser."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }  # OK; setuptools warns but still works
authors = [{ name = "Will Sheehan", email = "snowflake.utilities@gmail.com" }]

dependencies = [
  "streamlit>=1.29",
  "snowflake-connector-python>=3.0",
  "snowflake-snowpark-python>=1.10",
  "pandas>=1.5",
  "typing-extensions>=4.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.10",
  "ruff>=0.4",
  "black>=24.1.0",
  "mypy>=1.8"
]

# >>> src/ layout discovery (this is the key fix)
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sf_streamlit_utils*"]
